--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(315deg, #ffffff, #d7e1ec);
+}
+
+.options {
+  margin: 0 40px;
+  padding-top: 40px;
+
+  button {
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+  }
+
+  h4 {
+    margin-top: 20px;
+  }
+}
+.painel {
+  height: 600px;
+  margin: 50px 50px 0 50px;
+  border: solid 1px #6c757d;
+  border-radius: 15px;
+}
