tela de listar dos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <div class="row options">
   <div class="col-4">
-    <button id="cliente" class="btn btn-outline-secondary" routerLink="cliente" routerLinkActive="active">
+    <button id="cliente" class="btn btn-outline-secondary" routerLink="lista-cliente">
       <img src="../../assets/cliente.png" class="img-fluid">
-      <h4>Cliente</h4>
+      <h2>Cliente</h2>
     </button>
   </div>
   <div class="col-4">
-    <button id="produto" class="btn btn-outline-secondary">
+    <button id="produto" class="btn btn-outline-secondary" routerLink="lista-produto">
       <img src="../../assets/produto.png" class="img-fluid">
-      <h4>Produto</h4>
+      <h2>Produto</h2>
     </button>
   </div>
   <div class="col-4">
     <button id="pedido" class="btn btn-outline-secondary">
       <img src="../../assets/pedido.png" class="img-fluid">
-      <h4>Pedido</h4>
+      <h2>Pedido</h2>
     </button>
   </div>
 </div>
