ajustes layout nos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </button>
   </div>
   <div class="col-4">
-    <button id="pedido" class="btn btn-outline-secondary">
+    <button id="pedido" class="btn btn-outline-secondary" routerLink="lista-pedido">
       <img src="../../assets/pedido.png" class="img-fluid">
       <h2>Pedido</h2>
     </button>
