--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -1,13 +1,16 @@
-<div class="buttons mb-5">
-  <button type="button" class="btn btn-outline-secondary">
-    <mat-icon class="me-2">add</mat-icon>Novo
-  </button>
-  <button type="button" class="btn btn-outline-secondary ms-3">
-    <mat-icon class="me-2">edit</mat-icon>Editar
-  </button>
-  <button type="button" class="btn btn-outline-secondary ms-3">
-    <mat-icon class="me-2">delete</mat-icon>Excluir
-  </button>
+<div class="flex mb-4">
+  <h1>Clientes</h1>
+  <div class="buttons">
+    <button type="button" class="btn btn-outline-secondary">
+      <mat-icon class="me-2">add</mat-icon>Novo
+    </button>
+    <button type="button" class="btn btn-outline-secondary ms-3">
+      <mat-icon class="me-2">edit</mat-icon>Editar
+    </button>
+    <button type="button" class="btn btn-outline-secondary ms-3">
+      <mat-icon class="me-2">delete</mat-icon>Excluir
+    </button>
+  </div>
 </div>
 <table class="table">
   <thead>
