--- a/src/app/produto/lista-produto/lista-produto.component.scss
+++ b/src/app/produto/lista-produto/lista-produto.component.scss
@@ -1,10 +1,22 @@
+.flex {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .buttons {
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
   flex-wrap: nowrap;
 }
 
 button {
   display: flex;
   width: 100px;
+}
+
+h1 {
+  margin: 0;
 }
