--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -1,7 +1,7 @@
 <div class="flex mb-4">
   <h1>Clientes</h1>
   <div class="buttons">
-    <button type="button" class="btn btn-outline-secondary">
+    <button type="button" class="btn btn-outline-secondary" (click)="addCliente()">
       <mat-icon class="me-2">add</mat-icon>Novo
     </button>
     <button type="button" class="btn btn-outline-secondary ms-3">
