finalizando modal e chamada post novo cliente

--- a/src/app/pedido/lista-pedido/lista-pedido.component.html
+++ b/src/app/pedido/lista-pedido/lista-pedido.component.html
@@ -1,6 +1,6 @@
 <div class="flex mb-4">
   <div class="buttons">
-    <h1 class="me-3">Pedidos</h1>
+    <h5 class="me-3" style="margin-bottom: 0;">Pedidos</h5>
     <button type="button" class="btn btn-outline-success">
       <mat-icon class="me-2">add</mat-icon>Novo
     </button>
