--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <div class="row options">
   <div class="col-4">
     <button id="cliente" class="btn btn-outline-secondary" routerLink="lista-cliente">
-      <img src="../../assets/cliente.png" class="img-fluid">
-      <h2>Cliente</h2>
+      <img src="../../assets/cliente.png" class="img-fluid mb-3">
+      <h4>Cliente</h4>
     </button>
   </div>
   <div class="col-4">
     <button id="produto" class="btn btn-outline-secondary" routerLink="lista-produto">
-      <img src="../../assets/produto.png" class="img-fluid">
-      <h2>Produto</h2>
+      <img src="../../assets/produto.png" class="img-fluid mb-3">
+      <h4>Produto</h4>
     </button>
   </div>
   <div class="col-4">
     <button id="pedido" class="btn btn-outline-secondary" routerLink="lista-pedido">
-      <img src="../../assets/pedido.png" class="img-fluid">
-      <h2>Pedido</h2>
+      <img src="../../assets/pedido.png" class="img-fluid mb-3">
+      <h4>Pedido</h4>
     </button>
   </div>
 </div>
