--- a/src/app/cliente/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/cliente/cadastro-cliente/cadastro-cliente.component.html
@@ -2,12 +2,24 @@
 <div mat-dialog-content>
   <form class="formCliente" [formGroup]="clienteForm">
     <div class="mb-3">
+      <label for="cpf" class="form-label">CPF</label>
+      <input matInput id="cpf" class="form-control" formControlName="cpf" name="cpf">
+    </div>
+
+    <div class="mb-3">
       <label for="nome" class="form-label">Nome</label>
-      <input matInput id="nome" class="form-control">
+      <input matInput id="nome" class="form-control" formControlName="nome" name="nome">
+    </div>
+
+    <div class="mb-3">
+      <label for="sobrenome" class="form-label">Sobrenome</label>
+      <input matInput id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome">
     </div>
   </form>
 </div>
-<div mat-dialog-actions>
-  <button class="btn btn-danger me-3" mat-button (click)="close()">Fechar</button>
-  <button class="btn btn-success" mat-button [mat-dialog-close]="" cdkFocusInitial>Salvar</button>
+<div class="modal-footer">
+  <div mat-dialog-actions>
+    <button class="btn btn-danger me-3" mat-button (click)="closeModal()">Fechar</button>
+    <button class="btn btn-success" mat-button (click)="createClient()" cdkFocusInitial>Salvar</button>
+  </div>
 </div>
