--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -1,14 +1,14 @@
 <div class="flex mb-4">
-  <h5>Clientes</h5>
   <div class="buttons">
-    <button type="button" class="btn btn-outline-secondary" (click)="addCliente()">
+    <h5 class="me-3" style="margin-bottom: 0;">Clientes</h5>
+    <button type="button" class="btn btn-outline-success" (click)="addCliente()">
       <mat-icon class="me-2">add</mat-icon>Novo
     </button>
-    <button type="button" class="btn btn-outline-secondary ms-3">
-      <mat-icon class="me-2">edit</mat-icon>Editar
-    </button>
-    <button type="button" class="btn btn-outline-secondary ms-3">
-      <mat-icon class="me-2">delete</mat-icon>Excluir
+  </div>
+  <div class="buttons">
+    <input class="form-control me-2 pesquisa" type="search" placeholder="Pesquisar">
+    <button class="btn btn-outline-primary" type="submit">
+      <mat-icon>search</mat-icon>
     </button>
   </div>
 </div>
@@ -19,6 +19,8 @@
       <th scope="col">Nome</th>
       <th scope="col">Sobrenome</th>
       <th scope="col">CPF</th>
+      <th scope="col">Editar</th>
+      <th scope="col">Excluir</th>
     </tr>
   </thead>
   <tbody>
@@ -27,6 +29,16 @@
       <td>João</td>
       <td>V. Paltanin</td>
       <td>000.000.000-00</td>
+      <td>
+        <button type="button" class="btn btn-outline-warning ms-3">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+      <td>
+        <button type="button" class="btn btn-outline-danger ms-3">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
