--- a/src/app/produto/lista-produto/lista-produto.component.html
+++ b/src/app/produto/lista-produto/lista-produto.component.html
@@ -1,14 +1,14 @@
 <div class="flex mb-4">
-  <h5>Produtos</h5>
   <div class="buttons">
-    <button type="button" class="btn btn-outline-secondary">
+    <h5 class="me-3" style="margin-bottom: 0;">Produtos</h5>
+    <button type="button" class="btn btn-outline-success">
       <mat-icon class="me-2">add</mat-icon>Novo
     </button>
-    <button type="button" class="btn btn-outline-secondary ms-3">
-      <mat-icon class="me-2">edit</mat-icon>Editar
-    </button>
-    <button type="button" class="btn btn-outline-secondary ms-3">
-      <mat-icon class="me-2">delete</mat-icon>Excluir
+  </div>
+  <div class="buttons">
+    <input class="form-control me-2 pesquisa" type="search" placeholder="Pesquisar">
+    <button class="btn btn-outline-primary" type="submit">
+      <mat-icon>search</mat-icon>
     </button>
   </div>
 </div>
@@ -17,12 +17,24 @@
     <tr>
       <th scope="col">ID</th>
       <th scope="col">Descrição</th>
+      <th scope="col">Editar</th>
+      <th scope="col">Excluir</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
       <td>Caneta Azul</td>
+      <td>
+        <button type="button" class="btn btn-outline-warning ms-3">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+      <td>
+        <button type="button" class="btn btn-outline-danger ms-3">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
