--- a/src/app/cliente/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/cliente/cadastro-cliente/cadastro-cliente.component.html
@@ -2,24 +2,25 @@
 <div mat-dialog-content>
   <form class="formCliente" [formGroup]="clienteForm">
     <div class="mb-3">
-      <label for="cpf" class="form-label">CPF</label>
-      <input matInput id="cpf" class="form-control" formControlName="cpf" name="cpf">
+      <label for="cpf" class="form-label">CPF <span style="color: red;">*</span></label>
+      <input matInput id="cpf" name="cpf" class="form-control" formControlName="cpf" mask="000.000.000-00">
     </div>
 
     <div class="mb-3">
-      <label for="nome" class="form-label">Nome</label>
+      <label for="nome" class="form-label">Nome <span style="color: red;">*</span></label>
       <input matInput id="nome" class="form-control" formControlName="nome" name="nome">
     </div>
 
     <div class="mb-3">
-      <label for="sobrenome" class="form-label">Sobrenome</label>
+      <label for="sobrenome" class="form-label">Sobrenome <span style="color: red;">*</span></label>
       <input matInput id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome">
     </div>
   </form>
 </div>
 <div class="modal-footer">
   <div mat-dialog-actions>
-    <button class="btn btn-danger me-3" mat-button (click)="closeModal()">Fechar</button>
-    <button class="btn btn-success" mat-button (click)="createClient()" cdkFocusInitial>Salvar</button>
+    <button class="btn btn-danger me-3" mat-button (click)="closeModal()" cdkFocusInitial>Fechar</button>
+    <button type="submit" class="btn btn-success" mat-button (click)="createClient()"
+      [disabled]="clienteForm.pristine || clienteForm.invalid">Salvar</button>
   </div>
 </div>
