--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -29,7 +29,7 @@
         <th scope="row">{{cliente.id}}</th>
         <td>{{cliente.nome}}</td>
         <td>{{cliente.sobrenome}}</td>
-        <td>{{cliente.cpf}}</td>
+        <td>{{cliente.cpf | mask: '000.000.000-00'}}</td>
         <td>
           <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente.id)">
             <mat-icon>edit</mat-icon>
