--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -36,7 +36,7 @@
           </button>
         </td>
         <td>
-          <button type="button" class="btn btn-outline-danger ms-3">
+          <button type="button" class="btn btn-outline-danger ms-3" (click)="deleteCliente(cliente.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
