--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -32,7 +32,7 @@
         <td>{{cliente.sobrenome}}</td>
         <td>{{cliente.cpf | mask: '000.000.000-00'}}</td>
         <td>
-          <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente.id)">
+          <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente)">
             <mat-icon>edit</mat-icon>
           </button>
         </td>
