refatorando busca por nome

--- a/src/app/cliente/lista-cliente/lista-cliente.component.html
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.html
@@ -4,11 +4,14 @@
     <button type="button" class="btn btn-outline-success" (click)="addCliente()">
       <mat-icon class="me-2">add</mat-icon>Novo
     </button>
+    <button type="button" class="btn btn-secondary reset" (click)="pesquisa = false">
+      <mat-icon>refresh</mat-icon>
+    </button>
   </div>
   <div class="buttons" [formGroup]="searchForm">
     <input matInput type="search" id="search" name="search" class="form-control ms-2 me-2 pesquisa"
       formControlName="nomeCliente" placeholder="Pesquisar">
-    <button class="btn btn-outline-primary" type="submit" (click)="searchClienteByNome()">
+    <button class="btn btn-outline-primary" type="submit" (click)="searchCliente()">
       <mat-icon>search</mat-icon>
     </button>
   </div>
@@ -25,23 +28,49 @@
     </tr>
   </thead>
   <tbody>
-    <ng-container *ngFor="let cliente of clientes">
-      <tr>
-        <th scope="row">{{cliente.id}}</th>
-        <td>{{cliente.nome}}</td>
-        <td>{{cliente.sobrenome}}</td>
-        <td>{{cliente.cpf | mask: '000.000.000-00'}}</td>
-        <td>
-          <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-        <td>
-          <button type="button" class="btn btn-outline-danger ms-3" (click)="deleteCliente(cliente.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </tr>
-    </ng-container>
+    <div *ngIf="pesquisa == false">
+
+    </div>
+    <ng-template [ngIf]="!pesquisa" [ngIfElse]="listaPesquisa">
+      <ng-container *ngFor="let cliente of clientes">
+        <tr>
+          <th scope="row">{{cliente.id}}</th>
+          <td>{{cliente.nome}}</td>
+          <td>{{cliente.sobrenome}}</td>
+          <td>{{cliente.cpf | mask: '000.000.000-00'}}</td>
+          <td>
+            <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente)">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+          <td>
+            <button type="button" class="btn btn-outline-danger ms-3" (click)="deleteCliente(cliente.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </tr>
+      </ng-container>
+    </ng-template>
+
+    <ng-template #listaPesquisa>
+      <ng-container *ngFor="let cliente of resultClientes">
+        <tr>
+          <th scope="row">{{cliente.id}}</th>
+          <td>{{cliente.nome}}</td>
+          <td>{{cliente.sobrenome}}</td>
+          <td>{{cliente.cpf | mask: '000.000.000-00'}}</td>
+          <td>
+            <button type="button" class="btn btn-outline-warning ms-3" (click)="editCliente(cliente)">
+              <mat-icon>edit</mat-icon>
+            </button>
+          </td>
+          <td>
+            <button type="button" class="btn btn-outline-danger ms-3" (click)="deleteCliente(cliente.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </tr>
+      </ng-container>
+    </ng-template>
   </tbody>
 </table>
