ajustes na estrutura do projeto

--- a/src/app/cliente/cadastra-cliente/cadastra-cliente.component.html
+++ b/src/app/cliente/cadastra-cliente/cadastra-cliente.component.html
@@ -8,12 +8,12 @@
 
     <div class="mb-3">
       <label for="nome" class="form-label">Nome <span style="color: red;">*</span></label>
-      <input matInput id="nome" class="form-control" formControlName="nome" name="nome">
+      <input matInput id="nome" class="form-control" formControlName="nome" name="nome" mask="S{50}">
     </div>
 
     <div class="mb-3">
       <label for="sobrenome" class="form-label">Sobrenome <span style="color: red;">*</span></label>
-      <input matInput id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome">
+      <input matInput id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome" mask="S{70}">
     </div>
   </form>
 </div>
