--- a/src/app/cliente/lista-cliente/lista-cliente.component.scss
+++ b/src/app/cliente/lista-cliente/lista-cliente.component.scss
@@ -21,6 +21,10 @@
   margin-left: 16px !important;
 }
 
+tbody {
+  vertical-align: middle !important;
+}
+
 button {
   display: flex;
   margin: 0 !important;
