Criando inteligência para o objeto Produto

--- a/src/app/produto/lista-produto/lista-produto.component.html
+++ b/src/app/produto/lista-produto/lista-produto.component.html
@@ -22,6 +22,9 @@
     </tr>
   </thead>
   <tbody>
+    <!-- <ng-container *ngFor="let produtos of produtos">
+
+    </ng-container> -->
     <tr>
       <th scope="row">1</th>
       <td>Caneta Azul</td>
