--- a/src/app/cliente/cadastra-cliente/cadastra-cliente.component.html
+++ b/src/app/cliente/cadastra-cliente/cadastra-cliente.component.html
@@ -20,7 +20,7 @@
 <div class="modal-footer">
   <div mat-dialog-actions>
     <button class="btn btn-danger me-3" mat-button (click)="closeModal()" cdkFocusInitial>Fechar</button>
-    <button type="submit" class="btn btn-success" mat-button (click)="createClient()"
+    <button type="submit" class="btn btn-success" mat-button (click)="createCliente()"
       [disabled]="clienteForm.pristine || clienteForm.invalid">Salvar</button>
   </div>
 </div>
