--- a/src/app/produto/lista-produto/lista-produto.component.html
+++ b/src/app/produto/lista-produto/lista-produto.component.html
@@ -32,7 +32,7 @@
           </button>
         </td>
         <td>
-          <button type="button" class="btn btn-outline-danger ms-3">
+          <button type=" button" class="btn btn-outline-danger ms-3" (click)="deleteProduto(produto.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
