criação do componente e ajuste para editar produto

--- a/src/app/cliente/edita-cliente/edita-cliente.component.html
+++ b/src/app/cliente/edita-cliente/edita-cliente.component.html
@@ -24,7 +24,7 @@
 <div class="modal-footer">
   <div mat-dialog-actions>
     <button class="btn btn-danger me-3" mat-button (click)="closeModal()" cdkFocusInitial>Fechar</button>
-    <button id="saveEdit" class="btn btn-success" mat-button (click)="alterClient()"
+    <button id="saveEdit" class="btn btn-success" mat-button (click)="alterCliente()"
       [disabled]="clienteForm.pristine || clienteForm.invalid">Salvar</button>
   </div>
 </div>
