--- a/src/app/cliente/edita-cliente/edita-cliente.component.html
+++ b/src/app/cliente/edita-cliente/edita-cliente.component.html
@@ -12,12 +12,12 @@
 
     <div class="mb-3">
       <label for="nome" class="form-label">Nome</label>
-      <input matInput id="nome" class="form-control" formControlName="nome" name="nome">
+      <input id="nome" class="form-control" formControlName="nome" name="nome">
     </div>
 
     <div class="mb-3">
       <label for="sobrenome" class="form-label">Sobrenome</label>
-      <input matInput id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome">
+      <input id="sobrenome" class="form-control" formControlName="sobrenome" name="sobrenome">
     </div>
   </form>
 </div>
