--- a/src/app/produto/cadastra-produto/cadastra-produto.component.html
+++ b/src/app/produto/cadastra-produto/cadastra-produto.component.html
@@ -3,7 +3,7 @@
   <form class="formProduto" [formGroup]="produtoForm">
     <div class="mb-3">
       <label for="descricao" class="form-label">Descrição <span style="color: red;">*</span></label>
-      <input matInput id="descricao" name="descricao" class="form-control" formControlName="descricao">
+      <input id="descricao" name="descricao" class="form-control" formControlName="descricao">
     </div>
   </form>
 </div>
