--- a/src/app/produto/edita-produto/edita-produto.component.html
+++ b/src/app/produto/edita-produto/edita-produto.component.html
@@ -12,7 +12,7 @@
 
     <div class="mb-3">
       <label for="descricao" class="form-label">Descrição</label>
-      <input matInput id="descricao" class="form-control" formControlName="descricao" name="descricao">
+      <input id="descricao" class="form-control" formControlName="descricao" name="descricao">
     </div>
   </form>
 </div>
