--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
@@ -7,10 +7,11 @@
       <div class="row mb-3">
         <div class="col-10">
           <div>
-            <label for="nome" class="form-label">Nome</label>
-            <input id="nome" class="form-control" formControlName="nome" type="text" [matAutocomplete]="auto" />
+            <label for="nome" class="form-label">Nome <span style="color: red;">*</span></label>
+            <input id="nome" class="form-control" formControlName="nome" type="text" [matAutocomplete]="auto"
+              [attr.disabled]="this.disableInputNome" />
             <mat-autocomplete #auto="matAutocomplete">
-              <mat-option *ngFor="let item of filteredOptions" [value]="item">
+              <mat-option *ngFor="let item of filteredNomes" [value]="item">
                 {{item}}
               </mat-option>
             </mat-autocomplete>
@@ -18,7 +19,8 @@
           </div>
         </div>
         <div class="col-2 flex-col">
-          <button class="btn btn-outline-primary" type="submit" style="display: flex;">
+          <button class="btn btn-outline-primary" type="submit" style="display: flex;" (click)="getClienteByName()"
+            [disabled]="!this.meetCliente">
             <mat-icon>search</mat-icon>
           </button>
         </div>
@@ -27,13 +29,15 @@
         <div class="col">
           <div class="mb-3">
             <label for="sobrenome" class="form-label">Sobrenome</label>
-            <input class="form-control" type="text" id="sobrenome" disabled>
+            <input class="form-control" type="text" id="sobrenome"
+              value="{{this.cliente !=null ? this.cliente.sobrenome : ''}}" disabled>
           </div>
         </div>
         <div class="col">
           <div class="mb-3">
             <label for="cpf" class="form-label">CPF</label>
-            <input id="cpf" name="cpf" class="form-control" mask="000.000.000-00" disabled>
+            <input id="cpf" name="cpf" class="form-control"
+              value="{{this.cliente !=null ? (this.cliente.cpf | mask: '000.000.000-00') : ''}}" disabled>
           </div>
         </div>
       </div>
