--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
@@ -35,6 +35,23 @@
         </div>
       </div>
     </fieldset>
+    <fieldset class="mt-4">
+      <legend>Produtos</legend>
+      <hr>
+      <div class="row mb-3">
+        <div class="col">
+
+        </div>
+        <div class="col">
+          <ng-container *ngFor="let produto of produtos">
+            <tr>
+              <td class="pe-2"></td>
+              <td>{{produto.descricao}}</td>
+            </tr>
+          </ng-container>
+        </div>
+      </div>
+    </fieldset>
   </form>
 </div>
 <div class="modal-footer">
