--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
@@ -1,8 +1,12 @@
 <h1 mat-dialog-title>Novo Pedido</h1>
 <div mat-dialog-content>
+  <div *ngIf="this.validaQtd" class="alert alert-warning">
+    <mat-icon class="me-2">warning</mat-icon>
+    Quantidade informada inválida
+  </div>
   <form class="formProduto" [formGroup]="pedidoForm">
     <fieldset>
-      <legend>Dados do Cliente</legend>
+      <legend>Dados do cliente</legend>
       <hr>
       <div class="row mb-3">
         <div class="col-10">
@@ -35,19 +39,35 @@
         </div>
       </div>
     </fieldset>
-    <fieldset class="mt-4">
-      <legend>Produtos</legend>
+    <fieldset class="mt-3">
+      <legend>Itens do pedido</legend>
       <hr>
       <div class="row mb-3">
-        <div class="col">
-
+        <div class="col scroll">
+          <ul class="list-group">
+            <ng-container *ngFor="let produto of produtos">
+              <li class="list-group-item flex-list">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="idProd{{produto.id}}"
+                    (click)="createItemPedido(produto.id)">
+                  <label class="form-check-label" for="checkProduto">
+                    {{produto.descricao}}
+                  </label>
+                </div>
+                <input class="form-control form-control-sm" type="number" id="idQtdProd{{produto.id}}" name="quantidade"
+                  value="1" min="1" max="100" style="max-width: 65px;">
+              </li>
+            </ng-container>
+          </ul>
         </div>
-        <div class="col">
-          <ng-container *ngFor="let produto of produtos">
-            <tr>
-              <td class="pe-2"></td>
-              <td>{{produto.descricao}}</td>
-            </tr>
+        <div class="col scroll">
+          <ng-container *ngFor="let item of itensPedido">
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                {{item.produto.descricao}}
+                <span class="badge bg-success rounded-pill">{{item.quantidade}}</span>
+              </li>
+            </ul>
           </ng-container>
         </div>
       </div>
