--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.scss
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.scss
@@ -2,7 +2,7 @@
   legend {
     font-size: 16px;
     margin-bottom: 0;
-    text-align: end;
+    font-weight: bold;
   }
 
   h1 {
@@ -13,5 +13,33 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+  }
+
+  .flex2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .flex-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .scroll {
+    max-height: 200px;
+    overflow: auto;
+  }
+
+  .alert {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 10px;
   }
 }
