--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,8 +31,10 @@ body {
   }
 }
 .painel {
+  max-height: 565px;
   min-height: 500px;
-  height: auto;
+  overflow: auto;
+  height: 565px;
   margin: 50px;
   padding: 20px;
   border: solid 1px #6c757d;
