--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
@@ -6,7 +6,7 @@
   </div>
   <form class="formProduto" [formGroup]="pedidoForm">
     <fieldset>
-      <legend>Dados do cliente</legend>
+      <legend>Informe os dados do cliente</legend>
       <hr>
       <div class="row mb-3">
         <div class="col-10">
@@ -40,7 +40,7 @@
       </div>
     </fieldset>
     <fieldset class="mt-3">
-      <legend>Itens do pedido</legend>
+      <legend>Selecione os itens do pedido</legend>
       <hr>
       <div class="row mb-3">
         <div class="col scroll">
@@ -65,7 +65,7 @@
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 {{item.produto.descricao}}
-                <span class="badge bg-success rounded-pill">{{item.quantidade}}</span>
+                <span class="badge bg-primary rounded-pill">{{item.quantidade}}</span>
               </li>
             </ul>
           </ng-container>
@@ -78,6 +78,6 @@
   <div mat-dialog-actions>
     <button class="btn btn-danger me-3" mat-button (click)="closeModal()" cdkFocusInitial>Fechar</button>
     <button type="submit" class="btn btn-success" mat-button (click)="createPedido()"
-      [disabled]="pedidoForm.pristine || pedidoForm.invalid">Salvar</button>
+      [disabled]="pedidoForm.pristine || pedidoForm.invalid || itensPedido.length < 1">Salvar</button>
   </div>
 </div>
