style: listagem de pedidos

--- a/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
+++ b/src/app/pedido/cadastra-pedido/cadastra-pedido.component.html
@@ -22,7 +22,7 @@
         <div class="col-2 flex-col">
           <button class="btn btn-outline-primary" type="submit" style="display: flex;" (click)="getClienteByCpf()"
             [disabled]="!this.meetCpf">
-            <mat-icon>search</mat-icon>
+            <mat-icon>done</mat-icon>
           </button>
         </div>
       </div>
