--- a/src/app/pedido/lista-pedido/lista-pedido.component.html
+++ b/src/app/pedido/lista-pedido/lista-pedido.component.html
@@ -11,11 +11,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-          data-bs-target="#detalhePedido" aria-expanded="true" aria-controls="detalhePedido">
-          #{{pedido.id}}
+          [attr.data-bs-target]="'#detalhePedido' + pedido.id" aria-expanded="true"
+          [attr.aria-controls]="'detalhePedido' + pedido.id">
+          {{pedido.id}}
         </button>
       </h2>
-      <div id="detalhePedido" class="accordion-collapse collapse" data-bs-parent="#pedidos">
+      <div id="detalhePedido{{pedido.id}}" class="accordion-collapse collapse" data-bs-parent="#pedidos">
         <div class="accordion-body">
           <table class="table">
             <thead>
